# ragui

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: main.py
src/ragui/: __init__.py  _cli.py  _server.py
src/ragui/api/: loader.py  ragui.py
src/ragui/backend/: asgi.py  settings.py  urls.py
src/ragui/chats/: apps.py  models.py  urls.py  views.py
src/ragui/chats/migrations/: 0001_initial.py
src/ragui/cli/: __init__.py  cli.py
src/ragui/templates/: main.html  websocket_test.html
tests/: cli_test.py  test_cli.py
