[project]
name = "ragui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Spyros Avlonitis", email = "spyrosavl@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "pydantic>=2.10.3",
    "sqlmodel>=0.0.22",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
]

[project.scripts]
ragui = "ragui._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "langchain-openai>=0.2.12",
    "langchain>=0.3.12",
    "langchain-community>=0.3.12",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.4",
]
